# meeting-transcriber

./: .env.example  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-02-meeting-transcriber.md
docs/superpowers/specs/: 2026-07-02-meeting-transcriber-design.md
tests/: conftest.py  test_audio.py  test_diarize.py  test_export.py  test_jobs.py  test_merge.py  test_pipeline_slow.py  test_server.py  test_summarize.py  test_transcribe.py
tests/fixtures/: conversation.m4a  generate_conversation.py  ground_truth.json
transcriber/: __main__.py  audio.py  diarize.py  export.py  jobs.py  merge.py  server.py  summarize.py  transcribe.py
transcriber/static/: app.js  index.html  style.css
