[project]
name = "meeting-transcriber"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "mlx-whisper>=0.4",
    "pyannote.audio>=4,<5",
    "torch>=2.3",
    "torchaudio>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = ["slow: full-pipeline tests with real models"]
addopts = "-m 'not slow'"
testpaths = ["tests"]

[tool.uv]
package = false
